2010-11-29  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
	
	* src/dlvhex/HexGrammarPTToASTConverter.cpp: identifying the elements of module header
	* include/dlvhex/HexGrammar.h: adding tag to pred_decl and pred_list
	* Committed revision 2502.

2010-11-28  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* testsuite/TestHexParserModule.cpp: add a test case for the 'even' program which consists of 3 module 
	* Committed revision 2497.

2010-11-27  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
	
	* testsuite/TestHexParserModule.cpp: testing whether the module atom is registered
	* src/dlvhex/HexGrammarPTToASTConverter.cpp: adding createModAtomFromModAtom
	* include/dlvhex/HexGrammarPTToASTConverter.h: likewise
	* include/dlvhex/ProgramCtx.h: registering module atoms
	* include/dlvhex/Atoms.hpp: add struct ModuleAtom
	* include/dlvhex/ModuleAtomTable.hpp: table for storing module atoms (copy paste from ExternalAtomTable with renaming)
	* Committed revision 2490 and 2491

	* include/dlvhex/HexGrammar.tcc: allowing empty module inputs and module output with 0 arity
	* include/dlvhex/Atoms.hpp: fixing struct ModuleAtom
	* src/dlvhex/Atoms.cpp: fixing print output ModuleAtom
	* src/dlvhex/ProgramCtx.cpp: fixing print output ModuleAtom
	* src/dlvhex/HexGrammarPTToASTConverter.cpp: updating createModAtomFromModAtom
	* testsuite/TestHexParserModule.cpp: updating test cases for module output
	* Committed revision 2494

	* TestHexParserModule.cpp: add module header test
	* HexGrammarPTToASTConverter.cpp: add method if module header is found (doModuleHeader)
	* HexGrammarPTToASTConverter.h: add method if module header is found (doModuleHeader)
	* Committed revision 2496.

2010-11-26  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* ID-Concept.txt: adding definition for module atom
	* include/dlvhex/ID.hpp: adding definition for module atom
	* src/dlvhex/ID.hpp: adding definition for module atom
	* Comitted at revision 2477.
