@@ -237,7 +237,7 @@ TestHexParserModule_SOURCES = \
 	$(top_srcdir)/src/dlvhex/HexParser.cpp \
 	$(top_srcdir)/src/dlvhex/Atoms.cpp \
 	$(top_srcdir)/src/dlvhex/Interpretation.cpp \
-	$(top_srcdir)/src/dlvhex/ModuleTest.cpp \
+	$(top_srcdir)/src/dlvhex/ModuleSyntaxChecker.cpp \
 	$(top_srcdir)/src/dlvhex/Logger.cpp \
 	$(top_srcdir)/src/dlvhex/ID.cpp \
 	$(top_srcdir)/src/dlvhex/ProgramCtx.cpp \
